Adjust heading-size to avoid spill in mobile-view

--- a/docs/_sass/base/_page.scss
+++ b/docs/_sass/base/_page.scss
@@ -57,6 +57,17 @@ a {
   }
 }
 
+@media(min-width:480px){
+    .page-section {
+      h1.section-heading {
+        font-size: 1.5em;
+      }
+      h2.section-heading {
+        font-size: 1.5em;
+    }
+  }
+}
+
 // Highlight color customization
 ::-moz-selection {
   background: $primary;
